# attacus

./: .gitignore  .gitmodules  .gitmodules.txt  CMakeLists.txt  README.md  pyproject.toml  setup.py
examples/: CMakeLists.txt  example_app.cpp  example_app.h
examples/00-helloworld/: CMakeLists.txt  main.cpp  main.py
examples/00-helloworld/attacus/: main.cpp
examples/00-helloworld/web/: index.html
examples/01-methodchannel/: CMakeLists.txt  main.cpp  main.py  pubspec.yaml
examples/01-methodchannel/lib/: main.dart
examples/02-texture/: CMakeLists.txt  main.cpp
examples/02-texture/attacus/: CMakeLists.txt
examples/02-texture/lib/: main.dart
examples/02-texture/web/: manifest.json
examples/10-cubes/: CMakeLists.txt  main - Copy.cpp  main.cpp
examples/10-flutter-cubes/: CMakeLists.txt  main.cpp  main.py
examples/101-cubes/: CMakeLists.txt  main.cpp
examples/11-flutter-cubes/: main.cpp
examples/12-compositor/: CMakeLists.txt  pubspec.yaml
examples/120-nanovg/: CMakeLists.txt  main.cpp  scissor.cpp
examples/13-compositor-gl/: CMakeLists.txt
examples/14-platform-view - Copy/: CMakeLists.txt  main.cpp
examples/14-platform-view - Copy/lib/: main.dart  texture.dart
examples/14-platform-view - Copy/test/: widget_test.dart
examples/20-compositor-vg/: CMakeLists.txt  main.cpp
examples/20-nanovg/: CMakeLists.txt  graph.cpp  main.cpp  main.h  paragraph.cpp  searchbox.cpp  util.cpp
examples/21-compositor-vg-cubes/: CMakeLists.txt  main.cpp
examples/30-compositor-gfx/: CMakeLists.txt  main.cpp
examples/40-compositor-gl/: CMakeLists.txt  main.cpp
examples/41-compositor-gl-cubes/: CMakeLists.txt  main.cpp
examples/41-compositor-gl-cubes/lib/: main.dart
examples/42-compositor-gl-view/: CMakeLists.txt  main.cpp
examples/42-compositor-gl-view/lib/: main.dart  render.dart  view.dart
examples/90-cubes/: CMakeLists.txt
examples/91-nanovg/: CMakeLists.txt  data.cpp  lines.cpp  main.cpp
examples/aichat/: main copy.py  main.py  pubspec.yaml  pyproject.toml
examples/aichat/lib/: code_element_builder.dart  dot_loading_indicator.dart  main copy.dart  main.dart
examples/basic/: .metadata  CMakeLists.txt  main.cpp  pubspec.yaml
examples/basic/lib/: main.dart
examples/compositor-gl/: .metadata  CMakeLists.txt  main.cpp
examples/compositor-gl-cubes/: CMakeLists.txt  main.cpp
examples/compositor-gl-view/: CMakeLists.txt  README.md  main.cpp
examples/compositor-gl-view/lib/: controller.dart  view.dart
examples/cubes/: CMakeLists.txt  main.cpp
examples/cubes1/: main.cpp
examples/flutter-cubes/: CMakeLists.txt  main.cpp
examples/helloworld/: CMakeLists.txt  main.cpp
examples/methodchannel/: CMakeLists.txt  main.cpp  main.py
examples/methodchannel/lib/: control.dart  main.dart
examples/nanovg/: CMakeLists.txt  colorwheel.cpp  eyes.cpp  main.cpp  window.cpp
examples/resources/characters/robot/: sheet.xml
examples/resources/platformer/: ground.tmx  level1.tmx
examples/views/: CMakeLists.txt
examples/views/cubes/: CMakeLists.txt  cubes_view.cpp  cubes_view.h
src/attacus/: CMakeLists.txt  app.cpp  app.h
src/attacus/core/: CMakeLists.txt  component.cpp  component.h  event.h
src/attacus/flutter/: CMakeLists.txt  backing_store - Copy.h  backing_store.cpp  byte_buffer_streams.h  byte_streams.h  channel.h  encodable_value.h  engine_method_result.h  flutter_composite_view - Copy.cpp  flutter_composite_view - Copy.h  flutter_composite_view.cpp  flutter_composite_view.h  flutter_composite_view_gfx - Copy.cpp  flutter_composite_view_gfx - Copy.h  flutter_composite_view_gfx.cpp  flutter_composite_view_gfx.h  flutter_composite_view_gl - Copy.cpp  flutter_composite_view_gl - Copy.h  flutter_composite_view_gl.cpp  flutter_composite_view_gl.h  flutter_composite_view_vg.cpp  flutter_composite_view_vg.h  flutter_messenger.cpp  flutter_messenger.h  flutter_runner.cpp  flutter_runner.h  flutter_view.cpp  flutter_view.h  flutter_window.cpp  flutter_window.h  json.h  json_message_codec.cpp  json_message_codec.h  json_method_channel.h  json_method_codec.cpp  json_method_codec.h  message_codec.h  method.cpp  method.h  method_call.h  (+10 more)
src/attacus/flutter/components/: cursor.cpp  cursor.h  flutter_component.cpp  flutter_component.h  isolate.cpp  isolate.h  mouse_input.cpp  mouse_input.h  navigation.cpp  navigation.h  platform.cpp  platform.h  string_conversion.cpp  text_input.cpp  text_input.h  text_input_model.cpp  text_input_model.h  text_range.h  texture.h  texture_registrar.cpp  texture_registrar.h  view_registrar.cpp  view_registrar.h  view_registry.cpp  view_registry.h
src/attacus/flutter/compositor/: backing_layer.cpp  backing_layer.h  backing_store - Copy.cpp  backing_surface.cpp  backing_surface.h  backing_surface_gl.cpp  compositor.cpp  compositor.h  compositor_frame.cpp  compositor_frame.h  compositor_layer.cpp  compositor_layer.h
src/attacus/shell/: CMakeLists.txt  component.cpp  component.h  dispatcher.cpp  dispatcher.h  frame.cpp  frame.h  gfx.cpp  gfx.h  gfx_surface.h  gfx_view.cpp  gfx_view.h  gfx_window.cpp  gfx_window.h  platform_window.h  surface.cpp  surface.h  surface_kit.cpp  surface_kit.h  surface_manager.cpp  surface_manager.h  view.cpp  view.h  view_component.h  view_kit.cpp  view_kit.h  window.cpp  window.h  window_base.cpp  window_base.h  window_component.cpp  window_component.h
src/attacus_py/: CMakeLists copy.txt  CMakeLists.txt
src/attacus_py/bindings/: bindtools.h  conversions.h  generated.cpp  init.cpp  main.cpp
src/attacus_py/cmake/: AttacusPyConfig.cmake
src/bgfx/: CMakeLists.txt  bgfx.cpp  bgfx_p.h  renderer_vk.cpp  renderer_vk.h
src/bgfx/utils/: CMakeLists.txt  entry.cpp  entry.h  stb.cpp  utils.cpp
src/bimg/: CMakeLists.txt
src/bimg/astc-codec/: CMakeLists.txt
src/bimg/astc-codec/base/: CMakeLists.txt
src/glad/: CMakeLists.txt
src/glad/include/glad/: gl.h
src/glad/src/: gl.c
src/nanovg/: CMakeLists copy.txt  CMakeLists.txt
src/vg-renderer/: CMakeLists.txt
tests/: CMakeLists.txt  test_component.cpp  test_engine.py  test_event - Copy.cpp  test_event.cpp  test_event2.cpp
(+68 files in other folders)
