[tool.poetry]
name = "attacus-root"
version = "0.1.0"
description = ""
authors = ["Kurtis Fields <kurtisfields@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
aimgen = {path = "./pkg/aimgen",  develop = true}
glad = {path = "./3rdparty/glad",  develop = true}
pybind11 = "^2.10.0"
scikit-build = "^0.15.0"
cmake = "^3.24.1.1"

[build-system]
requires = [
    "setuptools>=42",
    "pybind11>=2.10.0",
    "cmake>=3.24.1.1",
    "scikit-build>=0.15.0",
]
build-backend = "poetry.masonry.api"
