[tool.poetry]
name = "attacus"
version = "0.1.0"
description = ""
authors = ["Kurtis Fields <kurtisfields@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
aimgen = {path = "./pkg/aimgen",  develop = true}
glad = {path = "./3rdparty/glad",  develop = true}
pybind11 = "^2.10.0"
scikit-build = "^0.16.2"
cmake = "^3.25.0"

[build-system]
requires = [
    "setuptools=^65.6.3",
    "pybind11=^2.10.1",
    "cmake=^3.25.0",
    "scikit-build=^0.16.2",
]
build-backend = "poetry.masonry.api"
