[tool.poetry]
name = "attacus"
version = "0.1.0"
description = ""
authors = ["Kurtis Fields <kurtisfields@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
loguru = "^0.7.0"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
glad = {path = "./3rdparty/glad",  develop = true}
pybind11 = "^2.10.4"
scikit-build = "^0.17.5"
cmake = "^3.26.3"

[build-system]
requires = [
    "setuptools=^67.8.0",
    "pybind11=^2.10.4",
    "cmake=^3.26.3",
    "scikit-build=^0.17.5",
]
build-backend = "poetry.masonry.api"
